<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sortByPriorityMenuItem"
        android:title="@string/sort_by_priority"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sortAscending"
                android:title="@string/ascending"
                app:showAsAction="never">
            </item>
            <item
                android:id="@+id/sortDescending"
                android:title="@string/descending"
                app:showAsAction="never">
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/clearAllTasksMenuItem"
        android:title="@string/delete_all_tasks"
        app:showAsAction="never">
    </item>
</menu>